--- a/index.html
+++ b/index.html
@@ -3,38 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Megane Learn</title>
+  <title>Megane Learn • Cours Auto Pro</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div id="loginScreen">
-    <div class="login-card">
-      <h1>🔒 Megane Learn</h1>
-      <p>Site réservé aux élèves & stagiaires<br>Bac Pro · BT Électromécanique</p>
-      <input type="text" id="passwordInput" placeholder="Entre le code d'accès">
-      <button id="loginBtn">Entrer</button>
+  <section class="section">
+    <h1>Megane Learn</h1>
+    <p style="font-size:1.5rem;color:#0066FF;margin:20px 0;">
+      Tous les cours PDF – Bac Pro & BT Électromécanique<br>
+      Gratuit · Anonyme · Sans inscription
+    </p>
+    <h2>🔍 Pourquoi chercher et lire des PDF ?</h2>
+    <p>
+      Un bon technicien ne dépend pas uniquement de son formateur.<br>
+      Savoir chercher la bonne information, comprendre un schéma, comparer des procédures = autonomie, rapidité et professionnalisme.<br>
+      <strong>Chaque PDF lu aujourd’hui, c’est une panne résolue demain.</strong>
+    </p>
+  </section>
+
+  <section class="section">
+    <h2>Accéder aux cours</h2>
+    <div class="buttons-row">
+      <a href="rech.html" class="big-btn">🔍 Recherche rapide</a>
+      <a href="bt.html" class="big-btn">🔵 Par matière</a>
     </div>
-  </div>
-
-  <div id="mainSite">
-    <section class="section">
-      <h2>🔍 Pourquoi chercher et lire des PDF ?</h2>
-      <p style="max-width:700px;margin:20px auto;">
-        Un bon technicien ne dépend pas uniquement de son formateur.<br>
-        Savoir chercher la bonne information = autonomie, rapidité et professionnalisme.<br>
-        <strong>Chaque PDF lu aujourd’hui, c’est une panne résolue demain.</strong>
-      </p>
-    </section>
-
-    <section class="section">
-      <h2>Accéder aux cours</h2>
-      <div class="buttons-row">
-        <a href="rech.html" class="big-btn">🔍 Recherche rapide</a>
-        <a href="bt.html" class="big-btn">🔵 Par matière</a>
-      </div>
-    </section>
-  </div>
+  </section>
 
   <nav class="bottom-nav">
     <a href="index.html">ACCUEIL</a>
@@ -45,4 +39,4 @@
 
   <script src="script.js"></script>
 </body>
-        </html>
+  </html>
