--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <section class="section">
     <h2>Accéder aux cours</h2>
     <div class="buttons-row">
-      <a href="rech.html" class="big-btn">🔍 Recherche rapide</a>
-      <a href="bt.html" class="big-btn">🔵 Par matière</a>
+      <a href="rech.html" class="big-btn">🔍 Recherche</a>
+      <a href="bt.html" class="big-btn">PRO</a>
     </div>
   </section>
 
