--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <h2>Accéder aux cours</h2>
     <div class="buttons-row">
       <a href="rech.html" class="big-btn">🔍 Recherche</a>
+    </div>
+      <div class="buttons-row">
       <a href="bt.html" class="big-btn">PRO</a>
     </div>
   </section>
