--- a/rech.html
+++ b/rech.html
@@ -5,26 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recherche PDF • Megane Learn</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.7.76/pdf.min.mjs" type="module"></script>
   <style>
     .search-container { text-align:center; padding:60px 20px 40px; }
     #searchInput { width:90%; max-width:600px; padding:18px 30px; font-size:1.5rem; border:5px solid #0066FF; border-radius:50px; outline:none; box-shadow:0 10px 30px rgba(0,102,255,0.2); }
     #status { margin-top:20px; font-size:1.2rem; color:#0066FF; font-weight:bold; }
     #resultCount { margin:30px 0; font-size:1.4rem; color:#0066FF; font-weight:bold; }
     .results-grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(340px,1fr)); gap:25px; padding:20px; max-width:1400px; margin:0 auto; }
-    .result-card { background:white; border:4px solid #0066FF; border-radius:20px; padding:25px; text-align:center; box-shadow:0 12px 35px rgba(0,102,255,0.15); transition:0.3s; }
-    .result-card:hover { transform:translateY(-10px); }
-    .file-title { font-weight:bold; font-size:1.3rem; color:#0066FF; margin:15px 0; }
-    .snippet { color:#555; margin:15px 0; }
-    .download-btn { background:#0066FF; color:white; padding:12px 30px; border-radius:50px; text-decoration:none; font-weight:bold; }
+    .result-card { background:white; border:4px solid #0066FF; border-radius:20px; padding:30px; text-align:center; box-shadow:0 12px 35px rgba(0,102,255,0.15); transition:0.3s; }
+    .result-card:hover { transform:translateY(-10px); box-shadow:0 25px 50px rgba(0,102,255,0.25); }
+    .file-title { font-weight:bold; font-size:1.4rem; color:#0066FF; margin-bottom:15px; }
+    .download-btn { background:#0066FF; color:white; padding:14px 35px; border-radius:50px; text-decoration:none; font-weight:bold; font-size:1.1rem; }
   </style>
 </head>
 <body>
 
   <div class="search-container">
-    <h1 style="color:#0066FF;">🔍 Recherche dans les PDF</h1>
-    <input type="text" id="searchInput" placeholder="Tape un mot-clé : moteur, schéma, frein, embrayage..." autofocus>
-    <div id="status">Chargement des PDF depuis rechfiles/...</div>
+    <h1 style="color:#0066FF;">🔍 Recherche rapide</h1>
+    <input type="text" id="searchInput" placeholder="Tape un mot du nom du fichier : moteur, frein, schéma, stage..." autofocus>
+    <div id="status">Chargement des PDF...</div>
     <div id="resultCount"></div>
   </div>
 
@@ -37,70 +35,59 @@
     <a href="confidentialite.html">CONFIDENTIALITÉ</a>
   </nav>
 
-  <script type="module">
-    const RECH_FOLDER = "rechfiles"; // ← ton dossier
+  <script>
+    const RECH_FOLDER = "rechfiles"; // ton dossier
     let allPDFs = [];
 
     async function loadPDFList() {
       try {
         const resp = await fetch(`https://api.github.com/repos/ivanipote/PDF-search/contents/${RECH_FOLDER}`);
         const files = await resp.json();
-        allPDFs = files
-          .filter(f => f.name.toLowerCase().endsWith('.pdf'))
-          .map(f => ({
-            name: f.name,
-            // LE TRUC QUI MARCHE À 100% : on utilise raw.githubusercontent.com au lieu de download_url
-            url: `https://raw.githubusercontent.com/ivanipote/PDF-search/main/${RECH_FOLDER}/${f.name}`
-          }));
-        document.getElementById("status").textContent = `${allPDFs.length} PDF chargés – tape un mot-clé !`;
+        allPDFs = files.filter(f => f.name.toLowerCase().endsWith('.pdf'));
+        document.getElementById("status").textContent = `${allPDFs.length} PDF disponibles – tape un mot du titre !`;
+        showAllPDFs(); // affiche tous les PDF au chargement
       } catch (e) {
-        document.getElementById("status").textContent = "Erreur : vérifie que le dossier 'rechfiles' existe";
+        document.getElementById("status").textContent = "Erreur de chargement";
       }
     }
 
-    const input = document.getElementById("searchInput");
-    const resultsDiv = document.getElementById("results");
-    const countDiv = document.getElementById("resultCount");
-
-    input.addEventListener("input", async () => {
-      const query = input.value.trim().toLowerCase();
-      resultsDiv.innerHTML = "";
-      countDiv.textContent = "";
-
-      if (query.length < 2) return;
-
-      let hits = 0;
-      allPDFs.forEach(async (pdf) => {
-        try {
-          const loadingTask = pdfjsLib.getDocument(pdf.url);
-          const doc = await loadingTask.promise;
-          let snippet = "";
-          let found = false;
-
-          for (let p = 1; p <= Math.min(doc.numPages, 10); p++) { // on limite à 10 pages pour la vitesse
-            const page = await doc.getPage(p);
-            const text = await page.getTextContent();
-            const pageText = text.items.map(i => i.str).join(" ").toLowerCase();
-            if (pageText.includes(query)) {
-              found = true;
-              if (!snippet) snippet = text.items.map(i => i.str).join(" ").substring(0, 250) + "...";
-            }
-          }
-
-          if (found) {
-            hits++;
-            const card = document.createElement("div");
-            card.className = "result-card";
-            card.innerHTML = `
-              <div class="file-title">📄 ${pdf.name}</div>
-              <div class="snippet">${snippet || "Contenu trouvé dans le PDF"}</div>
-              <a href="${pdf.url}" download class="download-btn">Télécharger</a>
-            `;
-            resultsDiv.appendChild(card);
-            countDiv.textContent = `${hits} résultat${hits > 1 ? 's' : ''} trouvé${hits > 1 ? 's' : ''}`;
-          }
-        } catch (e) { console.log("Erreur lecture PDF", pdf.name); }
+    function showAllPDFs() {
+      const grid = document.getElementById("results");
+      grid.innerHTML = "";
+      allPDFs.forEach(pdf => {
+        const card = document.createElement("div");
+        card.className = "result-card";
+        card.innerHTML = `
+          <div class="file-title">📄 ${pdf.name}</div>
+          <a href="https://raw.githubusercontent.com/ivanipote/PDF-search/main/${RECH_FOLDER}/${pdf.name}" download class="download-btn">Télécharger</a>
+        `;
+        grid.appendChild(card);
       });
+      document.getElementById("resultCount").textContent = `${allPDFs.length} PDF disponibles`;
+    }
+
+    // Recherche dans le NOM DU FICHIER (marche à 100%)
+    document.getElementById("searchInput").addEventListener("input", () => {
+      const query = document.getElementById("searchInput").value.trim().toLowerCase();
+      const grid = document.getElementById("results");
+      grid.innerHTML = "";
+      let hits = 0;
+
+      allPDFs.forEach(pdf => {
+        if (pdf.name.toLowerCase().includes(query)) {
+          hits++;
+          const card = document.createElement("div");
+          card.className = "result-card";
+          card.innerHTML = `
+            <div class="file-title">📄 ${pdf.name}</div>
+            <a href="https://raw.githubusercontent.com/ivanipote/PDF-search/main/${RECH_FOLDER}/${pdf.name}" download class="download-btn">Télécharger</a>
+          `;
+          grid.appendChild(card);
+        }
+      });
+
+      document.getElementById("resultCount").textContent = query ? `${hits} résultat${hits > 1 ? 's' : ''}` : `${allPDFs.length} PDF disponibles`;
+      if (hits === 0 && query) grid.innerHTML = "<p style='grid-column:1/-1;text-align:center;color:#666;padding:50px;'>Aucun PDF avec ce mot dans le titre 😔</p>";
     });
 
     loadPDFList();
