--- a/rech.html
+++ b/rech.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recherche Intelligente • Megane Learn</title>
+  <title>Recherche PDF • Megane Learn</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.7.76/pdf.min.mjs" type="module"></script>
   <style>
@@ -19,9 +19,73 @@
     .snippet { background:#f8fbff; padding:18px; border-radius:15px; margin:15px 0; line-height:1.7; font-size:1.1rem; }
     .highlight { background:#ff0; color:#000; font-weight:bold; padding:2px 6px; border-radius:4px; }
     .download-btn { background:#0066FF; color:white; padding:14px 40px; border-radius:50px; text-decoration:none; font-weight:bold; display:inline-block; margin-top:10px; }
+
+    /* BOUTON HISTORIQUE TÉLÉCHARGEMENTS (haut gauche) */
+    .history-btn {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      width: 60px;
+      height: 60px;
+      background: #0066FF;
+      color: white;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2.2rem;
+      box-shadow: 0 10px 30px rgba(0,102,255,0.5);
+      z-index: 9998;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .history-btn:hover { transform: scale(1.1); }
+    .history-btn.spin { animation: spin 1.5s linear infinite; }
+    @keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
+    .notification-dot {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      width: 18px;
+      height: 18px;
+      background: #ff0033;
+      border-radius: 50%;
+      border: 3px solid white;
+      animation: pulse 1.5s infinite;
+    }
+    @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.3); } 100% { transform: scale(1); } }
+
+    .history-modal {
+      position: fixed;
+      top: 90px;
+      left: 20px;
+      width: 340px;
+      max-height: 70vh;
+      background: white;
+      border: 5px solid #0066FF;
+      border-radius: 25px;
+      box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+      z-index: 9997;
+      overflow: hidden;
+      display: none;
+    }
+    .history-modal.show { display: block; animation: pop 0.4s; }
+    @keyframes pop { from { opacity:0; transform:scale(0.8); } to { opacity:1; transform:scale(1); } }
+    .history-header { background:#0066FF; color:white; padding:15px; text-align:center; font-weight:bold; font-size:1.3rem; }
+    .history-list { padding:15px; max-height:60vh; overflow-y:auto; }
+    .history-item { padding:12px; background:#f8fbff; margin:8px 0; border-radius:12px; color:#0066FF; font-weight:600; word-break:break-all; }
   </style>
 </head>
 <body>
+
+  <!-- BOUTON HISTORIQUE TÉLÉCHARGEMENTS -->
+  <div class="history-btn" id="historyBtn">⬇</div>
+  <div class="history-modal" id="historyModal">
+    <div class="history-header">PDF téléchargés récemment</div>
+    <div class="history-list" id="historyList">
+      <div style="text-align:center;color:#888;padding:30px;">Aucun téléchargement</div>
+    </div>
+  </div>
 
   <div class="search-container">
     <h1 style="color:#0066FF;">🔍 Recherche intelligente</h1>
@@ -40,6 +104,7 @@
   </nav>
 
   <script type="module">
+    // === CODE DE RECHERCHE INTELLIGENTE (identique à avant) ===
     const RECH_FOLDER = "rechfiles";
     let allPDFs = [];
 
@@ -48,10 +113,10 @@
         const resp = await fetch(`https://api.github.com/repos/ivanipote/PDF-search/contents/${RECH_FOLDER}`);
         const files = await resp.json();
         allPDFs = files.filter(f => f.name.toLowerCase().endsWith('.pdf'));
-        document.getElementById("status").textContent = `${allPDFs.length} PDF chargés – tape plusieurs mots pour une recherche intelligente !`;
+        document.getElementById("status").textContent = `${allPDFs.length} PDF chargés – tape plusieurs mots !`;
         showAllPDFs();
       } catch (e) {
-        document.getElementById("status").textContent = "Erreur : dossier rechfiles introuvable";
+        document.getElementById("status").textContent = "Erreur dossier rechfiles";
       }
     }
 
@@ -69,7 +134,7 @@
       const lowerName = pdfName.toLowerCase();
       const lowerText = pdfText.toLowerCase();
       terms.forEach(term => {
-        if (lowerName.includes(term)) score += 3; // bonus si dans le titre
+        if (lowerName.includes(term)) score += 3;
         if (lowerText.includes(term)) score += 1;
       });
       return score;
@@ -88,10 +153,10 @@
         let snippet = "";
         let fullText = "";
 
-        // 1. Recherche dans le nom du fichier
-        const nameMatchCount = terms.filter(t => pdf.name.toLowerCase().includes(t)).length;
+        if (pdf.name.toLowerCase().includes(terms.join(' '))) {
+          snippet = "Nom de fichier très pertinent";
+        }
 
-        // 2. Recherche dans le contenu (si possible)
         try {
           const loadingTask = pdfjsLib.getDocument(`https://raw.githubusercontent.com/ivanipote/PDF-search/main/${RECH_FOLDER}/${pdf.name}`);
           const doc = await loadingTask.promise;
@@ -107,33 +172,29 @@
         } catch (e) {}
 
         const score = calculateScore(pdf.name, fullText, terms);
-        if (score > 0 || nameMatchCount > 0) {
-          results.push({
-            pdf,
-            score,
-            snippet: snippet || "Trouvé dans le nom du fichier",
-            terms
-          });
+        if (score > 0) {
+          results.push({ pdf, score, snippet: snippet || "Trouvé dans le nom", terms });
         }
       }
 
-      // Tri par pertinence (le meilleur en haut)
       results.sort((a, b) => b.score - a.score);
+      showResults(results);
+    }
 
-      // Affichage
+    function showResults(results) {
       const grid = document.getElementById("results");
       grid.innerHTML = "";
-      document.getElementById("resultCount").textContent = `${results.length} résultat${results.length > 1 ? 's' : ''} intelligent${results.length > 1 ? 's' : ''}`;
+      document.getElementById("resultCount").textContent = `${results.length} résultat${results.length > 1 ? 's' : ''}`;
 
       results.forEach(item => {
         const rawUrl = `https://raw.githubusercontent.com/ivanipote/PDF-search/main/${RECH_FOLDER}/${item.pdf.name}`;
         const card = document.createElement("div");
         card.className = "result-card";
         card.innerHTML = `
-          <div class="score-badge">Score ${item.score}</div>
+          ${item.score > 0 ? `<div class="score-badge">Score ${item.score}</div>` : ''}
           <div class="file-title">📄 ${item.pdf.name}</div>
           <div class="snippet">${highlightText(item.snippet, item.terms)}</div>
-          <a href="${rawUrl}" download class="download-btn">Télécharger le PDF</a>
+          <a href="${rawUrl}" download class="download-btn">Télécharger</a>
         `;
         grid.appendChild(card);
       });
@@ -165,6 +226,59 @@
     });
 
     loadPDFList();
+  </script>
+
+  <!-- BOUTON HISTORIQUE + NOTIFICATION -->
+  <script>
+    const historyBtn = document.getElementById("historyBtn");
+    const historyModal = document.getElementById("historyModal");
+    const historyList = document.getElementById("historyList");
+
+    historyBtn.onclick = () => historyModal.classList.toggle("show");
+
+    document.querySelectorAll('a[download]').forEach(link => {
+      link.addEventListener("click", () => {
+        // Animation
+        historyBtn.classList.add("spin");
+        setTimeout(() => historyBtn.classList.remove("spin"), 3000);
+
+        // Historique
+        const fileName = link.getAttribute("href").split("/").pop();
+        let downloads = JSON.parse(localStorage.getItem("meganeDownloads") || "[]");
+        downloads = [fileName, ...downloads.filter(n => n !== fileName)].slice(0, 30);
+        localStorage.setItem("meganeDownloads", JSON.stringify(downloads));
+        updateHistory();
+
+        // Point rouge
+        if (!document.querySelector(".notification-dot")) {
+          const dot = document.createElement("div");
+          dot.className = "notification-dot";
+          historyBtn.appendChild(dot);
+        }
+
+        // Beep sonore
+        const beep = new Audio("data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEARKwAAIhYAQACABAAZGF0YQAAAAA=");
+        beep.volume = 0.4;
+        beep.play();
+      });
+    });
+
+    function updateHistory() {
+      let downloads = JSON.parse(localStorage.getItem("meganeDownloads") || "[]");
+      if (downloads.length === 0) {
+        historyList.innerHTML = '<div style="text-align:center;color:#888;padding:30px;">Aucun téléchargement</div>';
+      } else {
+        historyList.innerHTML = "";
+        downloads.forEach(name => {
+          const item = document.createElement("div");
+          item.className = "history-item";
+          item.textContent = name;
+          historyList.appendChild(item);
+        });
+      }
+    }
+
+    updateHistory();
   </script>
 
   <script src="script.js"></script>
