--- a/index.html
+++ b/index.html
@@ -18,22 +18,16 @@
 
   <!-- CONTENU PRINCIPAL -->
   <div class="main-content">
-    <h1 style="text-align:center;color:#0066FF;font-size:3.5rem;">
+    <h1 style="text-align:center;color:#0066FF;font-size:3.5rem;margin-top:100px;">
       Megane Learn
     </h1>
-    <p style="text-align:center;font-size:1.5rem;max-width:800px;margin:40px auto;line-height:1.8;">
+    <p style="text-align:center;font-size:1.5rem;max-width:800px;margin:50px auto;line-height:1.8;">
       Tous les cours PDF pour Bac Pro & BT Électromécanique<br>
-      Gratuit · Anonyme · Sans inscription · Mis à jour régulièrement
+      Gratuit · Anonyme · Sans inscription
     </p>
-
-    <div style="text-align:center;margin-top:80px;">
-      <p style="font-size:1.3rem;color:#555;">
-        Utilise la barre en bas pour naviguer :
-      </p>
-    </div>
   </div>
 
-  <!-- BARRE FIXE EN BAS (sur toutes les pages) -->
+  <!-- BARRE FIXE EN BAS -->
   <nav class="bottom-nav">
     <a href="index.html" class="active">ACCUEIL</a>
     <a href="rech.html">RECHERCHE</a>
