--- a/rech.html
+++ b/rech.html
@@ -33,10 +33,10 @@
   <div class="results-grid" id="results"></div>
 
   <nav class="bottom-nav">
-    <a href="index.html">ACCUEIL</a>
-    <a href="propos.html">À PROPOS</a>
-    <a href="contact.html">CONTACT</a>
-    <a href="confidentialite.html">CONFIDENTIALITÉ</a>
+  <a href="index.html">ACCUEIL</a>
+  <a href="rech.html" class="active">RECHERCHE</a>
+  <a href="bt.html">PRO</a>
+  <a href="gd.html">GUIDE</a>
   </nav>
 
   <script type="module">
