--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <!-- SIDEBAR UNIQUEMENT SUR L'ACCUEIL -->
   <div class="sidebar">
     <h3>Informations</h3>
-    <a href="contact.html">📱 Contact WhatsApp</a>
-    <a href="propos.html">👤 À propos</a>
-    <a href="confi.html">🔒 Confidentialité</a>
+    <a href="contact.html"><center>📱 Contact</center></a>
+    <a href="propos.html"><center>👤 À propos</center></a>
+    <a href="confi.html"><center>🔒 Confidentialité</center></a>
   </div>
 
   <!-- CONTENU PRINCIPAL -->
   <div class="main-content">
     <h1 style="text-align:center;color:#0066FF;font-size:3.5rem;margin-top:100px;">
-      Megane Learn
+      Megane-Learn
     </h1>
     <p style="text-align:center;font-size:1.5rem;max-width:800px;margin:50px auto;line-height:1.8;">
       Tous les cours PDF pour Bac Pro & BT Électromécanique<br>
