--- a/rech.html
+++ b/rech.html
@@ -24,7 +24,7 @@
 <body>
 
   <div class="search-container">
-    <h1 style="color:#0066FF;">🔍 Recherche intelligente</h1>
+    <h1 style="color:#0066FF;">écrivez un mot clé pour voir les pdf disponibles</h1>
     <input type="text" id="searchInput" placeholder="Ex : cours de math primitive, frein ABS, schéma électrique..." autofocus>
     <div id="status">Chargement des PDF depuis rechfiles/...</div>
     <div id="resultCount"></div>
