--- a/bt.html
+++ b/bt.html
@@ -111,6 +111,7 @@
       color: #0066FF;
       font-size: 2.8rem;
       margin-bottom: 30px;
+      text-align: center
     }
   </style>
 </head>
