--- a/bt.html
+++ b/bt.html
@@ -111,7 +111,7 @@
       color: #0066FF;
       font-size: 2.8rem;
       margin-bottom: 30px;
-      text-align: center
+      text-align: center;
     }
   </style>
 </head>
@@ -150,9 +150,8 @@
 
   <!-- CONTENU PRINCIPAL -->
 
-    <h1>🔵 PRO – Choisis une matière</h1>
-    <p style="font-size:1.4rem;max-width:700px;margin:40px auto;line-height:1.8;">
-      Clique sur le bouton ☰ en haut à gauche pour ouvrir le menu des matières.<br>
+    <h1>PRO – Choisis une matière</h1>
+    <p>Clique sur le bouton ☰ en haut à gauche pour ouvrir le menu des matières.<br>
       Tous les cours PDF sont classés par matière pour une recherche rapide et efficace.
     </p>
   </div>
