--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="close-btn" id="closeBtn">×</div>
     </div>
 
-    <a href=propos.html">À PROPOS</a>
+    <a href="propos.html">À PROPOS</a>
     <a href="contact.html">CONTACT</a>
     <a href="confi.html">CONFIDENTIALITÉ</a>
     
