--- a/propos.html
+++ b/propos.html
@@ -15,7 +15,29 @@
   </style>
 </head>
 <body>
+  <!-- HAMBURGER -->
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 
+  <!-- OVERLAY -->
+  <div class="overlay" id="overlay"></div>
+
+  <!-- SIDEBAR -->
+  <div class="sidebar" id="sidebar">
+    <div class="sidebar-header">
+      <h2>INFORMATIONS</h2>
+      <div class="close-btn" id="closeBtn">×</div>
+    </div>
+
+    <a href="propos.html">À PROPOS</a>
+    <a href="contact.html">CONTACT</a>
+    <a href="confi.html">CONFIDENTIALITÉ</a>
+    
+  </div>
+  
   <div class="about-container">
     <h1>À propos</h1>
 
