--- a/me.html
+++ b/me.html
@@ -13,7 +13,7 @@
     <div class="grid" id="grid"></div>
   </div>
 
-  <nav class="bottom-nav>
+  <nav class="bottom-nav">
     <a href="index.html">ACCUEIL</a>
     <a href="rech.html">RECHERCHE</a>
     <a href="bt.html" class="active">PRO</a>
