--- a/index.html
+++ b/index.html
@@ -3,8 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Megane Learn - Tous vos cours en PDF gratuitement</title>
+  
+  <!-- SEO META TAGS -->
+  <title>Megane Learn - Cours PDF Gratuits, Recherche Documents Éducatifs | Plateforme Étudiante</title>
+  <meta name="description" content="✅ Recherchez et téléchargez gratuitement des cours PDF, documents éducatifs, ressources étudiantes. Moteur de recherche intelligent pour fichiers PDF, MP3, images. Plateforme 100% gratuite pour étudiants.">
+  <meta name="keywords" content="cours PDF, documents gratuits, ressources étudiantes, téléchargement PDF, recherche fichiers, éducation, études, mémoires, exercices, PDF gratuits, cours en ligne">
+  <meta name="author" content="Megane Learn">
+  <meta name="robots" content="index, follow, max-image-preview:large">
+  <meta name="googlebot" content="index, follow">
+  
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Megane Learn - Cours PDF Gratuits | Recherche Documents">
+  <meta property="og:description" content="Plateforme de recherche et téléchargement de documents éducatifs gratuits pour étudiants">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ivanipote.github.io/PDF-search/">
+  <meta property="og:image" content="https://ivanipote.github.io/PDF-search/logo.png">
+  <meta property="og:site_name" content="Megane Learn">
+  
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Megane Learn - Cours PDF Gratuits">
+  <meta name="twitter:description" content="Recherchez et téléchargez des documents éducatifs gratuits">
+  
+  <!-- SCHEMA STRUCTURED DATA -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Megane Learn",
+    "description": "Plateforme de recherche et téléchargement de documents éducatifs gratuits",
+    "url": "https://ivanipote.github.io/PDF-search/",
+    "applicationCategory": "EducationApplication",
+    "operatingSystem": "Any",
+    "permissions": "browser",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "EUR"
+    },
+    "author": {
+      "@type": "Organization", 
+      "name": "Megane Learn",
+      "url": "https://ivanipote.github.io/PDF-search/"
+    },
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://ivanipote.github.io/PDF-search/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- FAVICON -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://ivanipote.github.io/PDF-search/" />
+  
+  <!-- STYLESHEETS -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <style>
+    /* [VOS STYLES EXISTANTS RESTENT ICI] */
+    .hero { padding: 120px 20px 80px; text-align: center; background: linear-gradient(135deg, #0066FF 0%, #0047b3 100%); color: white; border-radius: 0 0 30px 30px; margin-bottom: 40px; }
+    /* ... gardez tous vos styles actuels ... */
+  </style>
+</head>
   <style>
     /* Styles uniquement pour la section hero et recherche */
     .hero {
