--- a/index.html
+++ b/index.html
@@ -303,6 +303,36 @@
   
   <!-- Bannière Hero avec recherche -->
   <section class="hero">
+    <!-- Bannière Hero avec recherche -->
+<section class="hero">
+  <h1>Tous vos cours en PDF, gratuitement</h1>
+  <p>Megane Learn vous aide à trouver les ressources dont vous avez besoin pour réussir. Recherchez parmi des milliers de documents de qualité.</p>
+  <!-- ... votre recherche ... -->
+</section>
+
+<!-- ✅ AJOUTEZ CETTE SECTION CACHÉE POUR SEO -->
+<div style="display: none;" aria-hidden="true">
+  <h1>Megane Learn - Moteur de Recherche PDF,MP3,IMG... Gratuit</h1>
+  <h2>Plateforme de Recherche de Documents Éducatifs,De musique</h2>
+  <p>Megane Learn est une plateforme de recherche et téléchargement de documents éducatifs distrayant gratuits. 
+  Trouvez des cours PDF, ressources universitaires, exercices corrigés et mémoires gratuitement.</p>
+  
+  <h3>Services offerts :</h3>
+  <ul>
+    <li>Recherche de documents PDF et MP3</li>
+    <li>Téléchargement gratuit de ressources étudiantes</li>
+    <li>Prévisualisation des fichiers avant téléchargement via github</li>
+    <li>Interface intuitive pour étudiants</li>
+  </ul>
+  
+  <p>Mots-clés : recherche PDF, cours gratuits, documents universitaires, ressources étudiantes, 
+  téléchargement éducatif, plateforme éducation, études en ligne, bibliothèque numérique,MP3 download,math pdf,pdf des cours professionnel, lycée professionnel,site de ivan</p>
+</div>
+
+<!-- Résultats de recherche -->
+<div id="search-results">
+  <!-- ... contenu existant ... -->
+</div>
     <h1>Tous vos cours en PDF, gratuitement</h1>
     <p>Megane-Learn vous aide à trouver les ressources dont vous avez besoin pour réussir. Recherchez parmi des milliers de documents de qualité.</p>
     
