--- a/index.html
+++ b/index.html
@@ -526,5 +526,24 @@
 
   <!-- Lien FontAwesome pour les icônes -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- ✅ AJOUTEZ CE SCHEMA AVANT LA FIN DU BODY -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Megane Learn",
+    "url": "https://ivanipote.github.io/PDF-search/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://ivanipote.github.io/PDF-search/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- VOTRE SCRIPT JS EXISTANT -->
+  <script>
+    // [Votre code JavaScript existant]
+  </script>
 </body>
-  </html>
+</html>
