--- a/index.html
+++ b/index.html
@@ -289,15 +289,24 @@
 
   <!-- SIDEBAR -->
   <div class="sidebar" id="sidebar">
-    <div class="sidebar-header">
-      <h2>INFORMATIONS</h2>
-      <div class="close-btn" id="closeBtn">×</div>
+  <div class="sidebar-header">
+    <!-- ✅ LOGO AJOUTÉ ICI -->
+    <div style="text-align: center; margin-bottom: 30px; padding: 0 20px;">
+      <img src="logo.png" 
+           alt="Logo Megane Learn" 
+           style="width: 80px; height: 80px; border-radius: 20px; border: 3px solid #0066FF; margin-bottom: 10px;">
+      <h2 style="color: #0066FF; margin: 0; font-size: 1.5rem;">MEGANE LEARN</h2>
+      <p style="color: #666; margin: 5px 0 0 0; font-size: 0.9rem;">Recherche de PDF</p>
     </div>
-
-    <a href="propos.html">À PROPOS</a>
-    <a href="contact.html">CONTACT</a>
-    <a href="confi.html">CONFIDENTIALITÉ</a>
+    <div class="close-btn" id="closeBtn">×</div>
   </div>
+  
+  <!-- [VOS LIENS EXISTANTS RESTENT] -->
+  <a href="propos.html">À PROPOS</a>
+  <a href="contact.html">CONTACT</a>
+  <a href="confi.html">CONFIDENTIALITÉ</a>
+  </div>
+
 
   <!-- CONTENU PRINCIPAL -->
   
