--- a/index.html
+++ b/index.html
@@ -276,6 +276,20 @@
   </style>
 </head>
 <body>
+  <!-- ✅ LOGO FIXE EN HAUT À GAUCHE -->
+  <div class="header-logo">
+    <img src="logo.png" alt="Megane Learn" class="logo-header">
+    <span class="logo-text">Megane Learn</span>
+  </div>
+
+  <!-- HAMBURGER -->
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+
+  <!-- ... le reste de votre code existant ... -->
 
   <!-- HAMBURGER -->
   <div class="hamburger" id="hamburger">
