--- a/rech.html
+++ b/rech.html
@@ -38,6 +38,21 @@
   <a href="bt.html">PRO</a>
   <a href="gd.html">GUIDE</a>
   </nav>
+  
+  <!-- HAMBURGER (gauche) -->
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+
+  <!-- ✅ LOGO FIXE EN HAUT À DROITE -->
+  <div class="header-logo">
+    <img src="logo.png" alt="Megane Learn" class="logo-header">
+    <span class="logo-text">Megane Learn</span>
+  </div>
+
+  <!-- ... le reste de votre code existant ... -->
 
   <script type="module">
     const RECH_FOLDER = "rechfiles";
