--- a/bt.html
+++ b/bt.html
@@ -157,6 +157,20 @@
     <a href="ln.html">ELN DE PUISSANCE</a>
     <a href="mt.html">MAINTENANCE</a>
   </div>
+  <!-- HAMBURGER (gauche) -->
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+
+  <!-- ✅ LOGO FIXE EN HAUT À DROITE -->
+  <div class="header-logo">
+    <img src="logo.png" alt="Megane Learn" class="logo-header">
+    <span class="logo-text">Megane Learn</span>
+  </div>
+
+  <!-- ... le reste de votre code existant ... -->
 
   <!-- CONTENU PRINCIPAL -->
   <div class="main-content">
