--- a/gd.html
+++ b/gd.html
@@ -81,7 +81,21 @@
   </style>
 </head>
 <body>
+<body>
+  <!-- HAMBURGER (gauche) -->
+  <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 
+  <!-- ✅ LOGO FIXE EN HAUT À DROITE -->
+  <div class="header-logo">
+    <img src="logo.png" alt="Megane Learn" class="logo-header">
+    <span class="logo-text">Megane Learn</span>
+  </div>
+
+  <!-- ... le reste de votre code existant ... -->
   <div class="guide-container">
     <h1>📘 Guide d'utilisation</h1>
     <p class="intro">
