--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
     }
     
     .result-item .file-info {
-      color: #666;
+      color: green;
       font-size: 0.9rem;
       margin-bottom: 10px;
     }
     
     .result-item .file-preview {
-      color: #888;
+      color: green;
       font-style: italic;
       margin-top: 10px;
       font-size: 0.9rem;
@@ -168,13 +168,13 @@
 
     .loading {
       text-align: center;
-      color: #666;
+      color: green;
       padding: 20px;
     }
 
     .error {
       text-align: center;
-      color: #ff4444;
+      color: red;
       padding: 20px;
     }
 
