--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
     <span></span>
   </div>
     <!-- [VOS LIENS EXISTANTS RESTENT] -->
+    <a href="pay.html">PREMIUM<a>
   <a href="propos.html">À PROPOS</a>
   <a href="contact.html">CONTACT</a>
   <a href="confi.html">CONFIDENTIALITÉ</a>
